Added PSD mockup file

--- a/index.html
+++ b/index.html
@@ -134,8 +134,9 @@
 
       <!-- FOOTER -->
       <footer>
-        <p class="pull-right"><a href="http://examples.getbootstrap.com/carousel/index.html#">Back to top</a></p>
-        <p>© 2013 Company, Inc. · <a href="http://examples.getbootstrap.com/carousel/index.html#">Privacy</a> · <a href="http://examples.getbootstrap.com/carousel/index.html#">Terms</a></p>
+        <p class="pull-right"><a href="#">Back to top</a></p>
+        <p>© 2013 Digital Literacy Project (DLP) Inc · <a href="http://examples.getbootstrap.com/carousel/index.html#">Privacy</a> · <a href="http://examples.getbootstrap.com/carousel/index.html#">Terms</a></p>
+        <p>We are a 501(c)(3) organization. Donations are tax deductible to the full extent allowable under IRS regulations.</p>
       </footer>
 
     </div><!-- /.container -->
