--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Carousel Template for Bootstrap</title>
+    <title>The Digital Literacy Project</title>
 
     <!-- Bootstrap core CSS -->
     <link href="http://examples.getbootstrap.com/bootstrap/css/bootstrap.css" rel="stylesheet">
@@ -26,24 +26,15 @@
     	      <span class="icon-bar"></span>
     	      <span class="icon-bar"></span>
     	    </button>
-            <a class="navbar-brand" href="http://examples.getbootstrap.com/carousel/index.html#">Project name</a>
+            <a class="navbar-brand" href="http://examples.getbootstrap.com/carousel/index.html#"><> Digital Literacy Project</a>
             <div class="nav-collapse collapse">
               <ul class="nav navbar-nav">
-                <li class="active"><a href="http://examples.getbootstrap.com/carousel/index.html#">Home</a></li>
-                <li><a href="http://examples.getbootstrap.com/carousel/index.html#about">About</a></li>
-                <li><a href="http://examples.getbootstrap.com/carousel/index.html#contact">Contact</a></li>
-                <li class="dropdown">
-                  <a href="http://examples.getbootstrap.com/carousel/index.html#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
-                  <ul class="dropdown-menu">
-                    <li><a href="http://examples.getbootstrap.com/carousel/index.html#">Action</a></li>
-                    <li><a href="http://examples.getbootstrap.com/carousel/index.html#">Another action</a></li>
-                    <li><a href="http://examples.getbootstrap.com/carousel/index.html#">Something else here</a></li>
-                    <li class="divider"></li>
-                    <li class="nav-header">Nav header</li>
-                    <li><a href="http://examples.getbootstrap.com/carousel/index.html#">Separated link</a></li>
-                    <li><a href="http://examples.getbootstrap.com/carousel/index.html#">One more separated link</a></li>
-                  </ul>
-                </li>
+                <li><a href="http://examples.getbootstrap.com/carousel/index.html#">Mission</a></li>
+                <li><a href="http://examples.getbootstrap.com/carousel/index.html#about">Initiatives</a></li>
+                <li><a href="http://examples.getbootstrap.com/carousel/index.html#contact">News</a></li>
+                <li><a href="http://examples.getbootstrap.com/carousel/index.html#contact">Team</a></li>
+                <li><a href="http://examples.getbootstrap.com/carousel/index.html#contact">Sponsors</a></li>
+                <li><a href="http://examples.getbootstrap.com/carousel/index.html#contact">Donate</a></li>
               </ul>
             </div>
           </div>
