--- a/index.html
+++ b/index.html
@@ -46,14 +46,13 @@
 
     <!-- Carousel
     ================================================== -->
-    <div id="myCarousel" class="carousel slide" style="background-color: #000; background-image: url('digilit.png'); background-repeat:no-repeat; background-attachment:fixed; background-position:center top;">
-      <div class="carousel-inner">
-        <div class="item active">
-          <div class="container">
-            <div class="carousel-caption">
+    <div id="myCarousel" class="carousel slide" style="background-color: #000; background-image: url('images/cropped_home.jpg'); background-repeat:no-repeat; background-attachment:fixed; background-position:center top; height: 870px;">
+      <div class="carousel-inner" style="height: inherit;">
+        <div class="item active" style="height: inherit;">
+          <div class="container" style="height: inherit; ">
+            <div class="carousel-caption" style="top: 600px; height: 180px; padding: 10px; color: #1C1C1C; background-color: rgba(240, 240, 240, 0.7); border: 1px solid #CECECE; -webkit-border-radius: 10px; -moz-border-radius: 10px; border-radius: 10px;">
               <h1>Tech for all.</h1>
-              <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-              <p><a class="btn btn-large btn-primary" href="#" style="background-color: rgb(128, 0, 0); border-color: #8E8E8E; box-shadow: 0 0 2px 2px #CECECE; margin: 10px; padding: 10px;">Donate</a><a class="btn btn-large btn-primary" href="#" style="background-color: rgb(128, 0, 0); border-color: #8E8E8E; box-shadow: 0 0 2px 2px #CECECE; margin: 10px; padding: 10px;">Donate</a><a class="btn btn-large btn-primary" href="#" style="background-color: rgb(128, 0, 0); border-color: #8E8E8E; box-shadow: 0 0 2px 2px #CECECE; margin: 10px; padding: 10px;">Donate</a></p>
+              <p>We believe in the transformative power of technology. Through computer donations and computer science lessons, we are expanding access to technology one community at a time.</p>
             </div>
           </div>
         </div>
