Better file structure

--- a/index.html
+++ b/index.html
@@ -8,10 +8,14 @@
     <title>The Digital Literacy Project</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="http://examples.getbootstrap.com/bootstrap/css/bootstrap.css" rel="stylesheet">
+    <link href="./assets/css/bootstrap.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
     <link href="http://examples.getbootstrap.com/carousel/carousel.css" rel="stylesheet">
+
+    <!-- DLP Stylesheet -->
+    <link href="./assets/css/dlp.css" rel="stylesheet">
+
   <style id="holderjs-style" type="text/css">.holderjs-fluid {font-size:16px;font-weight:bold;text-align:center;font-family:sans-serif;margin:0}</style></head>
 <!-- NAVBAR
 ================================================== -->
@@ -46,7 +50,7 @@
 
     <!-- Carousel
     ================================================== -->
-    <div id="myCarousel" class="carousel slide" style="background-color: #000; background-image: url('images/cropped_home.jpg'); background-repeat:no-repeat; background-attachment:fixed; background-position:center top; height: 870px;">
+    <div id="myCarousel" class="carousel slide" style="background-color: #000; background-image: url('./assets/images/cropped_home.jpg'); background-repeat:no-repeat; background-attachment:fixed; background-position:center top; height: 870px;">
       <div class="carousel-inner" style="height: inherit;">
         <div class="item active" style="height: inherit;">
           <div class="container" style="height: inherit; ">
@@ -136,9 +140,9 @@
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="./index_files/jquery.js"></script>
-    <script src="./index_files/bootstrap.js"></script>
-    <script src="./index_files/holder.js"></script>
+    <script src="./assets/js/jquery.js"></script>
+    <script src="./assets/js/bootstrap.min.js"></script>
+    <script src="./assets/js/holder.js"></script>
   
 
 </body></html>
