cleaning up unused files

--- a/files/index.html
+++ b/files/index.html
@@ -13,7 +13,7 @@
     <!-- Custom styles for this template -->
     <link href="http://examples.getbootstrap.com/carousel/carousel.css" rel="stylesheet">
 
-    <link href='http://fonts.googleapis.com/css?family=Droid+Sans' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Droid+Sans|Open+Sans|Lato' rel='stylesheet' type='text/css'>
     <!-- DLP Stylesheet -->
     <link
      href="./assets/css/dlp.css" rel="stylesheet">
