attempting to make do with header... we need better photos

--- a/files/index.html
+++ b/files/index.html
@@ -59,7 +59,7 @@
           <div class="container" style="height: inherit; ">
             <div id="myCarouselCaption">
               <h1>Tech for all.</h1>
-              <p>We believe in the transformative power of technology. Through computer donations and computer science lessons, we are expanding access to technology one community at a time.</p>
+              <p>Through computer donations and computer science lessons, promote access to technology locally and abroad.</p>
             </div>
           </div>
         </div>
@@ -76,11 +76,11 @@
     <div class="container marketing">
 
       <!-- Three columns of text below the carousel -->
-      <div class="row" style="min-height: 420px; border: 2px solid #CECECE;">
+      <div class="row" style="min-height: 420px;">
         <div class="col-lg-4">
           <img class="img-circle" src="assets/images/local1.jpg" style="width: 140px; height: 140px;">
           <h2>Projects</h2>
-          <p>DLP is a Harvard student-run nonprofit organization. We promote access to technology locally and abroad. In the Greater Boston Area, we teach computer science lessons in middle schools. Outside of the United States, we donate technology to rural communities and lead lessons on how to use it.</p>
+          <p>We a Harvard student-run nonprofit organization. We promote access to technology locally and abroad. In the Greater Boston Area, we teach computer science lessons in middle schools. Outside of the United States, we donate technology to rural communities and lead lessons on how to use it.</p>
           <p><a class="btn btn-default" href="initiatives.html">Read More »</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4" style="border-left: 0; border-right: 0;">
