got rid of featurettes, replaced with easier-to-read statistics

--- a/files/index.html
+++ b/files/index.html
@@ -108,50 +108,25 @@
 
       </div><!-- /.row -->
 
-
-      <!-- START THE FEATURETTES -->
-
-      <!--
-      <hr class="featurette-divider">
-
-      <div class="featurette">
-        <img class="featurette-image img-circle pull-right" src="assets/images/IMG_0164.JPG" style="width: 312px; height: 312px;">
-        <h2 class="featurette-heading">Local Initiatives <span class="text-muted">in the Greater Boston Area.</span></h2>
-        <p class="lead">DLP is based in Cambridge, Massachusetts. We are committed to providing computers and computer science lessons to middle schools in the Greater Boston Area. In 2010 and 2011, <a href="local.html">we ran two pilot programs</a> in grades four through six, where we used <a href="http://laptop.org">XO Laptops</a> to teach students about the power and versility of technology. In fall 2013, we are expanding our pilot programs to three to five local middle schools. <a href="volunteer.html">Get Involved!</a></p>
-      </div>
-
-      <hr class="featurette-divider">
-      <div class="featurette">
-        <img class="featurette-image img-circle pull-left" src="assets/images/IMG_1046.JPG" style="width: 312px; height: 312px;">
-        <h2 class="featurette-heading">Global Initiatives <span class="text-muted">in Nicaragua, Hong Kong...</span></h2>
-        <p class="lead">We are dedicated to reaching communities that would not otherwise have access to technology. In January 2010, we worked with the Inter-American Development Bank to set up an XO laptop check-out library at the Nicaraguan Deaf Association in Managua. In August 2012, we deployed 30 XO laptops at two primary schools in low-income neighborhoods on the outskirts of Hong Kong. Both of these donations were coupled with lessons from DLP volunteers. We are excited about our plans to continue international outreach in the coming year. <a href="global.html">Learn more!</a></p>
-      </div>
-
-      <hr class="featurette-divider">
-      -->
-
-      <!-- /END THE FEATURETTES -->
-
     </div><!-- /.container -->
 
     <div class="row initiatives" id="impact">
       <div class="container">
-        <div class=".col-lg-3">Our Impact</div>
-        <div class=".col-lg-3">
-          <span class="stat">5</span>
-          <span class="stat-description">local middle schools</span>
+        <div class="col-lg-3">
+          <p class="stat">5</p>
+          <p class="stat-description">DLP programs in Boston area middle schools</p>
         </div>
-        <div class=".col-lg-3">
-          <span class="stat">3</span>
-          <span class="stat-description">international communities</span>
+        <div class="col-lg-3 ">
+          <p class="stat">2</p>
+          <p class="stat-description">international communities helped by DLP initiatives</p>
         </div>
-        <div class=".col-lg-3">
-          <span class="stat">20</span>
-          <span class="stat-description">computers donated</span>
+        <div class="col-lg-3">
+          <p class="stat">60</p>
+          <p class="stat-description">computers donated to low-income communities abroad</p>
         </div>
-        <div class=".col-lg-3">
-          <span class="stat">100</span>
-          <span class="stat-description">students educated locally & abroad</span>
+        <div class="col-lg-3">
+          <p class="stat">100</p>
+          <p class="stat-description">students educated around the world</p>
         </div>
       </div>
     </div>
