got rid of brackets in logo

--- a/files/index.html
+++ b/files/index.html
@@ -32,7 +32,7 @@
     	      <span class="icon-bar"></span>
     	    </button>
 
-            <a class="navbar-brand" href="index.html"><div id="dlpmainheader" style="font-size: 1.3em; float: left;">digital literacy project</div></a>
+            <a class="navbar-brand" href="index.html"><div id="dlpmainheader" style="font-size: 1.3em; float: left;">Digital Literacy Project</div></a>
 
             <div class="nav-collapse collapse">
               <ul class="nav navbar-nav">
@@ -75,7 +75,7 @@
 
     <div class="container marketing">
 
-      <div class="row" id="mission" style="min-height: 100px">
+      <div class="row section-header" style="min-height: 100px">
         We are a non-profit organization on a mission to expand access to technology in Boston and abroad.
       </div>
 
@@ -87,7 +87,7 @@
             <span>Projects</span>
           </a>
           
-          <p class="description">We aim to spread knowledge about technology in Boston and around the world.</p>
+          <p class="description">We promote computer literacy locally and around the world.</p>
         </div><!-- /.col-lg-4 -->
 
         <div class="col-lg-4 call-to-action">
@@ -95,7 +95,7 @@
             <span>Volunteer</span>
           </a>
           
-          <p class="description">Teach computer science in local schools & promote technology in rural communities.</p>
+          <p class="description">Volunteer to teach in local schools & promote technology in rural communities.</p>
         </div><!-- /.col-lg-4 -->
 
         <div class="col-lg-4 call-to-action">
@@ -110,8 +110,11 @@
 
     </div><!-- /.container -->
 
-    <div class="row initiatives" id="impact">
+    <div class="row" id="impact">
       <div class="container">
+        <div class="section-header" style="min-height: 100px">
+          Help us continue to make an impact.
+        </div>
         <div class="col-lg-3">
           <p class="stat">5</p>
           <p class="stat-description">DLP programs in Boston area middle schools</p>
