--- a/files/news.html
+++ b/files/news.html
@@ -10,7 +10,10 @@
     <!-- Bootstrap core CSS -->
     <link href="./assets/css/bootstrap.css" rel="stylesheet">
 
-    <link href='http://fonts.googleapis.com/css?family=Droid+Sans' rel='stylesheet' type='text/css'>
+    <!-- Custom styles for this template -->
+    <link href="http://examples.getbootstrap.com/carousel/carousel.css" rel="stylesheet">
+
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans|Lato:300,400,700,900|Roboto+Slab:400,700' rel='stylesheet' type='text/css'>
     <!-- DLP Stylesheet -->
     <link
      href="./assets/css/dlp.css" rel="stylesheet">
