--- a/files/sponsors.html
+++ b/files/sponsors.html
@@ -10,7 +10,10 @@
     <!-- Bootstrap core CSS -->
     <link href="./assets/css/bootstrap.css" rel="stylesheet">
 
-    <link href='http://fonts.googleapis.com/css?family=Droid+Sans' rel='stylesheet' type='text/css'>
+    <!-- Custom styles for this template -->
+    <link href="http://examples.getbootstrap.com/carousel/carousel.css" rel="stylesheet">
+
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans|Lato:300,400,700,900|Roboto+Slab:400,700' rel='stylesheet' type='text/css'>
     <!-- DLP Stylesheet -->
     <link
      href="./assets/css/dlp.css" rel="stylesheet">
@@ -29,13 +32,12 @@
             <span class="icon-bar"></span>
           </button>
 
-            <a class="navbar-brand" href="index.html"><div style="color: #ff4040; font-size: 1.4em; float: left; "><</div><div id="dlpmainheader" style="font-size: 1.3em; float: left;">Digital Literacy Project</div><div style="color: #ff4040; font-size: 1.4em; float: left; ">></div></a>
+            <a class="navbar-brand" href="index.html"><div id="dlpmainheader" style="font-size: 1.3em; float: left;">Digital Literacy Project</div></a>
 
             <div class="nav-collapse collapse">
               <ul class="nav navbar-nav">
                 <li><a href="mission.html">Mission</a></li>
                 <li><a href="initiatives.html">Initiatives</a></li>
-
                 <li><a href="team.html">Team</a></li>
                 <li><a href="sponsors.html">Sponsors</a></li>
                 <li><a href="donate.html">Donate</a></li>
