just making sure github is all updated

--- a/files/index.html
+++ b/files/index.html
@@ -76,7 +76,7 @@
     <div class="container marketing">
 
       <div class="row section-header" style="min-height: 100px">
-        We are a non-profit organization on a mission to expand access to technology in Boston and abroad.
+        We are a non-profit organization aiming to expand access to technology in Boston and abroad.
       </div>
 
       <!-- Three columns of text below the carousel -->
