--- a/files/initiatives.html
+++ b/files/initiatives.html
@@ -68,14 +68,17 @@
       </div>
 
  <hr class="featurette-divider">
-      <!-- FOOTER -->
-      <footer>
+ 
+    </div><!-- /.container -->
+
+    <!-- FOOTER -->
+    <footer>
+      <div class="container">
         <p class="pull-right"><a href="#">Back to top</a></p>
         <p>© 2013 Digital Literacy Project (DLP) Inc · <a href="terms.html">Terms and Privacy Policy</a></p>
         <p>We are a 501(c)(3) organization. Donations are tax deductible to the full extent allowable under IRS regulations.</p>
-      </footer>
-
-    </div><!-- /.container -->
+      </div>
+    </footer>
 
 
 
