--- a/files/sponsors.html
+++ b/files/sponsors.html
@@ -55,35 +55,40 @@
         <div class="row mission">
           <h2 style="text-align: center;">Thank you.</h2>
           <br>
-            <p>The Digital Literacy Project is extremely indebted to its sponsors. We would like to take this opportunity to sincerely thank all the individual donors and organizations that make DLP possible.</p>
+          <p>The Digital Literacy Project is extremely indebted to its sponsors. We would like to take this opportunity to sincerely thank all the individual donors and organizations that make DLP possible.</p>
 
-            <p>We would especially like to thank the following organizations for their generous contributions to DLP:</p>
-            <ul>
-              <li><h3><a href="http://www.drclas.harvard.edu/">
-                David Rockefeller Center for Latin American Studies   </a></li>
-            
-              <li><h3><a href="http://www.dosomething.org/">
-                Do Something    </a></li>
+          <p>We would especially like to thank the following organizations for their generous contributions to DLP:</p>
+          <ul>
+            <li><h3><a href="http://www.drclas.harvard.edu/">
+              David Rockefeller Center for Latin American Studies   </a></li>
+          
+            <li><h3><a href="http://www.dosomething.org/">
+              Do Something    </a></li>
 
-              <li><h3><a href="http://www.seo.harvard.edu/icb/icb.do?keyword=k59221&tabgroupid=icb.tabgroup86103">
-                Harvard College Research Program    </a></li>
+            <li><h3><a href="http://www.seo.harvard.edu/icb/icb.do?keyword=k59221&tabgroupid=icb.tabgroup86103">
+              Harvard College Research Program    </a></li>
 
-             <li><h3><a href="http://www.harvardstudentagencies.com/i3/default.asp">
-                i3 Innovation Challenge   </a></li>
+           <li><h3><a href="http://www.harvardstudentagencies.com/i3/default.asp">
+              i3 Innovation Challenge   </a></li>
 
-              <li><h3><a href="http://www.genv.net/">
-                Youth Venture   </a></li>
-              </ul>
+            <li><h3><a href="http://www.genv.net/">
+              Youth Venture   </a></li>
+            </ul>
+          </div>
 
-     <hr class="featurette-divider">
-      <!-- FOOTER -->
-      <footer>
+      <hr class="featurette-divider">
+
+      </div>
+    </div><!-- /.container -->
+
+    <!-- FOOTER -->
+    <footer>
+      <div class="container">
         <p class="pull-right"><a href="#">Back to top</a></p>
         <p>© 2013 Digital Literacy Project (DLP) Inc · <a href="terms.html">Terms and Privacy Policy</a></p>
         <p>We are a 501(c)(3) organization. Donations are tax deductible to the full extent allowable under IRS regulations.</p>
-      </footer>
-
-    </div><!-- /.container -->
+      </div>
+    </footer>
 
 
 
