index and header done

--- a/files/index.html
+++ b/files/index.html
@@ -59,7 +59,7 @@
           <div class="container" style="height: inherit; ">
             <div id="myCarouselCaption">
               <h1>Transform communities with technology.</h1>
-              <a class="btn btn-default" href="volunteer.html">Get Involved »</a>
+              <a id="volunteer-btn" class="btn btn-default teal" href="volunteer.html">Volunteer »</a>
             </div>
           </div>
         </div>
