--- a/files/mission.html
+++ b/files/mission.html
@@ -51,7 +51,14 @@
 
     <div class="container">
       <div class="maincontainer">
-        <h1>Our Mission</h1>
+        <div class="col-lg-12">
+          <h1 class="page-title">Our Mission</h1>
+          <div class="row mission">
+            <p id="mission-statement">
+              DLP's mission is to open doors by increasing digital literacy across the globe.
+            </p>
+          </div>
+        </div>
         <div class="row mission">
           <div class="col-lg-8">
               <h3>Summary</h3>
@@ -72,8 +79,6 @@
           </div>
         </div>
       </div>
-
- <hr class="featurette-divider">
 
     </div><!-- /.container -->
 
