--- a/files/sponsors.html
+++ b/files/sponsors.html
@@ -68,15 +68,13 @@
             <li><h3><a href="http://www.seo.harvard.edu/icb/icb.do?keyword=k59221&tabgroupid=icb.tabgroup86103">
               Harvard College Research Program    </a></li>
 
-           <li><h3><a href="http://www.harvardstudentagencies.com/i3/default.asp">
+           <li><h3><a href="http://harvardi3.org/">
               i3 Innovation Challenge   </a></li>
 
             <li><h3><a href="http://www.genv.net/">
               Youth Venture   </a></li>
             </ul>
           </div>
-
-      <hr class="featurette-divider">
 
       </div>
     </div><!-- /.container -->
