--- a/files/volunteer.html
+++ b/files/volunteer.html
@@ -32,7 +32,7 @@
             <span class="icon-bar"></span>
           </button>
 
-            <a class="navbar-brand" href="index.html"><div style="color: #ff4040; font-size: 1.4em; float: left; "><</div><div id="dlpmainheader" style="font-size: 1.3em; float: left;">Digital Literacy Project</div><div style="color: #ff4040; font-size: 1.4em; float: left; ">></div></a>
+            <a class="navbar-brand" href="index.html"><div id="dlpmainheader" style="font-size: 1.3em; float: left;">Digital Literacy Project</div></a>
 
             <div class="nav-collapse collapse">
               <ul class="nav navbar-nav">
@@ -52,7 +52,7 @@
 
     <div class="container">
       <div class="maincontainer">
-        <h1>Volunteer</h1>
+        <h1 class="page-title">Volunteer</h1>
         <div class="row mission">
           <br>
           <h3>Thanks for your interest!</h3>
@@ -67,19 +67,25 @@
           <p>Please sign <a href="https://docs.google.com/a/college.harvard.edu/forms/d/122K5VKU3JYYljkrGsKTyGZMwya8WrRKPcxPt-6mCLAQ/viewform">this short form</a> so we can contact you (must use a @college.harvard.edu email to access). Thank you!</p>
           <p><a href="mailto:info@digiliteracy.org">Questions?</a>
         </div>
-      </div>
+        <div class="row section-header" id="apply-row" style="min-height: 100px">
+          We need you. Volunteer to teach programming in local schools.
 
-     <hr class="featurette-divider">
-      <!-- FOOTER -->
-      <footer>
+          <br/>
+
+          <p><a id="apply-btn" class="btn btn-default teal" href="https://docs.google.com/a/college.harvard.edu/forms/d/122K5VKU3JYYljkrGsKTyGZMwya8WrRKPcxPt-6mCLAQ/viewform">Apply</a></p>
+        </div>
+
+      </div>
+    </div><!-- /.container -->
+
+    <!-- FOOTER -->
+    <footer>
+      <div class="container">
         <p class="pull-right"><a href="#">Back to top</a></p>
         <p>© 2013 Digital Literacy Project (DLP) Inc · <a href="terms.html">Terms and Privacy Policy</a></p>
         <p>We are a 501(c)(3) organization. Donations are tax deductible to the full extent allowable under IRS regulations.</p>
-      </footer>
-
-    </div><!-- /.container -->
-
-
+      </div>
+    </footer>
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
