first iteration of volunteer page

--- a/files/sponsors.html
+++ b/files/sponsors.html
@@ -51,21 +51,20 @@
 
     <div class="container">
       <div class="maincontainer">
-        <h1>Sponsors</h1>
         <div class="row mission">
-          <h2 style="text-align: center;">Thank you.</h2>
+          <h1 class="page-title" style="text-align: center;">Thank you.</h2>
           <br>
           <p>The Digital Literacy Project is extremely indebted to its sponsors. We would like to take this opportunity to sincerely thank all the individual donors and organizations that make DLP possible.</p>
 
           <p>We would especially like to thank the following organizations for their generous contributions to DLP:</p>
-          <ul>
+          <ul id="sponsors-list">
             <li><h3><a href="http://www.drclas.harvard.edu/">
               David Rockefeller Center for Latin American Studies   </a></li>
           
             <li><h3><a href="http://www.dosomething.org/">
               Do Something    </a></li>
 
-            <li><h3><a href="http://www.seo.harvard.edu/icb/icb.do?keyword=k59221&tabgroupid=icb.tabgroup86103">
+            <li><h3><a href="http://undergrad-research.harvard.edu/icb/icb.do?keyword=k61667&tabgroupid=icb.tabgroup172417">
               Harvard College Research Program    </a></li>
 
            <li><h3><a href="http://harvardi3.org/">
