--- a/files/team.html
+++ b/files/team.html
@@ -50,92 +50,90 @@
       </div>
     </div>
 
-    <div class="container">
+    <div id="team" class="container">
       <div class="maincontainer">
-        <h1>Board of Directors</h1>
+        <h1 class="page-title">Board of Directors</h1>
         <div class="row mission">
           <div class="col-lg-4">
-              <img class="img-rounded img-responsive" src="assets/images/tom.jpg">
+              <img class="img-responsive" src="assets/images/tom.jpg">
           </div>
           <div class="col-lg-8">
-            <h3>Tom Silver</h3>
+            <h2>Tom Silver</h2>
             <h4>President</h4>
             <p>Tom is a Harvard sophomore in Mather House. He is concentrating in Mathematics and Computer Science with a secondary in Statistics. He also has interests in education, molecular biology, and politics. As President of the Digital Literacy Project, he is responsible for overseeing and implementing all domestic and international DLP initiatives. He enjoys coding, coffee, and corgis.</p>
           </div>
         </div>
         <div class="row mission">
           <div class="col-lg-4">
-              <img class="img-rounded img-responsive" src="assets/images/julianna.jpg">
+              <img class="img-responsive" src="assets/images/julianna.jpg">
           </div>
           <div class="col-lg-8">
-            <h3>Julianna Aucoin</h3>
+            <h2>Julianna Aucoin</h2>
             <h4>Director of Finance</h4>
             <p>Julianna is a Harvard sophomore in Winthrop. Her responsibilities as Director of Finance include implementing fundraising campaigns, writing grants, and handling all legal aspects of DLP. She enjoys the comedy of Louis CK and writes for Harvard's news comedy show, <em>On Harvard Time</em>.</p>
           </div>
         </div>
         <div class="row mission">
           <div class="col-lg-4">
-              <img class="img-rounded img-responsive" src="assets/images/hannah.jpg">
+              <img class="img-responsive" src="assets/images/hannah.jpg">
           </div>
           <div class="col-lg-8">
-            <h3>Hannah Blumberg</h3>
+            <h2>Hannah Blumberg</h2>
             <h4>Director of Curriculum</h4>
             <p>Hannah is a Harvard sophomore in Cabot House. She is concentrating in computer science and, as Director of Curriculum, will be designing lesson plans for DLP. Hannah tutored for several years in her hometown in New York and is now looking forward to working with the future computer scientists of Massachusetts.</p>
           </div>
         </div>
         <div class="row mission">
           <div class="col-lg-4">
-              <img class="img-rounded img-responsive" src="assets/images/jenny.jpg">
+              <img class="img-responsive" src="assets/images/jenny.jpg">
           </div>
           <div class="col-lg-8">
-            <h3>Jenny Choi</h3>
+            <h2>Jenny Choi</h2>
             <h4>Director of Community Outreach</h4>
-            <p>Jenny is a Harvard sophomore in Winthrop. As Director of Community Outreach, Jenny is responsible for contacting middle schools in the Greater Boston Area, technology corporations, and industry experts about potential partnerships with DLP. She also oversees all publicity and recruitment for the organization. Jenny is a very active member of Harvard's Institute of Politics and copresident of <em>Athena</em>, a Harvard-based mentorship program for girls.</p>
+            <p>Jenny is a Harvard sophomore in Winthrop. She is responsible for contacting middle schools in the Greater Boston Area, technology corporations, and industry experts about potential partnerships. She also oversees all publicity and recruitment for the organization. Jenny is a very active member of Harvard's Institute of Politics and copresident of <em>Athena</em>, a Harvard-based mentorship program for girls.</p>
           </div>
         </div>
         <div class="row mission">
           <div class="col-lg-4">
-              <img class="img-rounded img-responsive" src="assets/images/colin.jpg">
+              <img class="img-responsive" src="assets/images/colin.jpg">
           </div>
           <div class="col-lg-8">
-            <h3>Colin Diersing</h3>
+            <h2>Colin Diersing</h2>
             <h4>Director of Education</h4>
-            <p>Colin is a Sophomore in Cabot house planning on studying social studies. He spends much of his time at the Institute of Politics, where he is involved in a range of programs including the Harvard Political Review, Civics teaching program, Harvard Public Opinion Project, and education policy group. He is excited to work with the great DLP team to bring high quality computer science programs to Boston middle schools and get students excited about STEM. He likes coffee and things written by Aaron Sorkin.</p>
+            <p>Colin is a sophomore in Cabot planning to study social studies. He spends much of his time at the Institute of Politics, where he is involved in the Harvard Political Review, Civics teaching program, Harvard Public Opinion Project, and education policy group. He is excited help bring computer science programs to Boston middle schools and get students excited about STEM. He likes coffee and things written by Aaron Sorkin.</p>
           </div>
         </div>
         <div class="row mission">
           <div class="col-lg-4">
-              <img class="img-rounded img-responsive" src="assets/images/matt.jpg">
+              <img class="img-responsive" src="assets/images/matt.jpg">
           </div>
           <div class="col-lg-8">
-            <h3>Matthew Disler</h3>
+            <h2>Matthew Disler</h2>
             <h4>Director of International Outreach</h4>
-            <p>Matthew Disler is DLP's Director of International Outreach, in charge of planning and coordinating the organization's efforts to provide quality computer education to communities around the world.  A sophomore from Richmond, Virginia, he is interested in comparative politics and international relations (but he has not yet declared his concentration).  Most recently, he worked at the Justice Studies Center of the Americas in Santiago, Chile, where he authored a study on police protest policy in Latin America, the United States, Spain, and the United Kingdom.  He is also involved in the <em>Harvard Political Review</em> and <em>Satire V</em>, a Harvard satire publication.</p>
+            <p>Matthew is in charge of organizing DLP's efforts to provide computer education to communities globally. A sophomore from Richmond, Virginia, he is interested in comparative politics and international relations.  He recently worked at the Justice Studies Center of the Americas in Santiago, Chile, where he authored a study on police protest policy. He is also involved in the <em>Harvard Political Review</em> and <em>Satire V</em>.</p>
           </div>
         </div>
         <div class="row mission">
           <div class="col-lg-4">
-              <img class="img-rounded img-responsive" src="assets/images/stef.jpg">
+              <img class="img-responsive" src="assets/images/stef.jpg">
           </div>
           <div class="col-lg-8">
-            <h3>Stefanie Grossano</h3>
+            <h2>Stefanie Grossano</h2>
             <h4>Director of International Education</h4>
-            <p>Stefanie Grossano is a sophomore at Boston University studying neuroscience with a minor in education. As Director of International Education, she is responsible for identifying the technological educational needs of international communities and designing a curriculum to address those needs. When Stefanie is not working on DLP, she loves to bake and has been known to do so at all hours of the night. She hails from a small town in New Jersey. </p>
+            <p>Stefanie is a sophomore at Boston University studying neuroscience with a minor in education. She would like to help close the gender disparity in STEM, especially in computer science. She is responsible for identifying the educational needs of international communities and designing suitable curriculums. She loves to bake and has been known to do so at all hours of the night. She hails from a small town in New Jersey. </p>
           </div>
         </div>
         <div class="row mission">
           <div class="col-lg-4">
-              <img class="img-rounded img-responsive" src="assets/images/ved.jpg">
+              <img class="img-responsive" src="assets/images/ved.jpg">
           </div>
           <div class="col-lg-8">
-            <h3>Ved Topkar</h3>
+            <h2>Ved Topkar</h2>
             <h4>Director of Technology</h4>
-            <p>Ved is a Harvard sophomore in Lowell or Leverett I think ?.</p>
+            <p>Ved is a Harvard sophomore in Eliot House. He is interested in biology, chemistry, physics, and computer science and hopes to use this to get children excited about technology. He coordinates partnerships with other organizations, designs lesson plans (especially hardware), and ensures that DLP is using the best technologies possible. He is also involved in The Triple Helix, and the Harvard South Asian Association.</p>
           </div>
         </div>
       </div>
-
- <hr class="featurette-divider">
 
     </div><!-- /.container -->
 
