--- a/files/volunteer.html
+++ b/files/volunteer.html
@@ -52,27 +52,21 @@
 
     <div class="container">
       <div class="maincontainer">
-        <h1 class="page-title">Volunteer</h1>
-        <div class="row mission">
-          <br>
-          <h3>Thanks for your interest!</h3>
-          <p>We are currently recruiting volunteers to teach computer science in Boston middle school classrooms for the 2013 fall semester. If you are:
-            <ul>
-              <li>A Harvard student with experience in computer science (required)</li>
-              <li>Available 1.5-2.5 hours weekly for teaching (required)</li>
-              <li>Available for 1 hour weekly meetings within organization (required)</li>
-              <li>Available for three one-time training sessions early in the semester (required)</li>
-              <li>Comfortable teaching in Python (preferred)</li>
-            </ul>
-          <p>Please sign <a href="https://docs.google.com/a/college.harvard.edu/forms/d/122K5VKU3JYYljkrGsKTyGZMwya8WrRKPcxPt-6mCLAQ/viewform">this short form</a> so we can contact you (must use a @college.harvard.edu email to access). Thank you!</p>
-          <p><a href="mailto:info@digiliteracy.org">Questions?</a>
+        <div class="row centered">
+          <h1 class="page-title">We need you.</h1>
         </div>
-        <div class="row section-header" id="apply-row" style="min-height: 100px">
-          We need you. Volunteer to teach programming in local schools.
+        <div class="row centered">
+          <iframe width="800" height="451" src="http://www.youtube.com/embed/nKIu9yen5nc" frameborder="0" allowfullscreen></iframe>
+        </div>
 
-          <br/>
+        <div class="row mission centered">
+          <p id="make-a-difference">
+            Make a difference in someone's life. Sign up to teach programming in local schools.
+          </p>
+        </div>
 
-          <p><a id="apply-btn" class="btn btn-default teal" href="https://docs.google.com/a/college.harvard.edu/forms/d/122K5VKU3JYYljkrGsKTyGZMwya8WrRKPcxPt-6mCLAQ/viewform">Apply</a></p>
+        <div class="row centered" style="min-height: 100px">
+          <p><a id="apply-btn" class="btn btn-default teal" href="https://docs.google.com/a/college.harvard.edu/forms/d/122K5VKU3JYYljkrGsKTyGZMwya8WrRKPcxPt-6mCLAQ/viewform">Apply now!</a></p>
         </div>
 
       </div>
